<resources>
    <string name="app_name">PennyWise</string>
    <string name="action_save">Save</string>
    <string name="action_pay">Record Payment</string>
    <string name="payment">Payment</string>
    <string name="payment_amount" formatted="false">Current loan balance %s %s.\nEnter payment details</string>
    <string name="cancel">Cancel</string>
    <string name="pay">Pay</string>
    <string name="loan_details_paid_text">Payment  Total:</string>
    <string name="loan_details_balance_text">Balance:</string>
    <string name="loan_details_place_holder_text">%s</string>
    <string name="loan_details_amount">Amount:</string>
    <string name="contactCreationFailure">Contact creation failed.</string>
    <string name="pay_date">Date</string>
    <string name="contact_hint">Contact</string>
    <string name="note_header">Note</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Drawer Closing</string>
    <string name="hint_event_note">Note</string>
    <string name="no_reminder">No</string>
    <string name="hint_amount">Amount</string>
    <string name="start_date">Start date</string>
    <string name="no_transactions">No Transactions</string>
    <string name="action_edit">Edit Transaction</string>
    <string name="password_category">Passcode</string>
    <string name="prefCurrency">selectedCurrency</string>
    <string name="set_password">Set Passcode</string>
    <string name="prefTogglePin">pref_toggle_pin</string>
    <string name="prefToggleBiometric">pref_toggle_biometric</string>
    <string name="prefShowPinEntry">pref_show_pin_entry</string>
    <string name="prefBackUpService">pref_backup_service_provider_entry</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="forgot">Forgot PIN</string>
    <string name="transaction_settings">Transactions</string>
    <string name="prefShowPaid">pref_hide_paid</string>
    <string name="hide_paid_transactions">Show paid transactions</string>
    <string name="action_message">Send Reminder</string>
    <string name="message_settings">Messaging</string>
    <string name="prefTemplate">pref_msg_template</string>
    <string name="prefMsgtemplate">Edit message template</string>
    <string name="msg_template">Hi @name, this is just a reminder that you owe me @amount and I need it paid.</string>
    <string name="my_debt">Payable</string>
    <string name="their_debt">Receivable</string>
    <string name="remind_me">Yes</string>
    <string name="required">required field</string>
    <string name="transaction_adId">ca-app-pub-6424626033677167/8103931336</string>
    <string name="payment_adId">ca-app-pub-6424626033677167/6627198135</string>
    <string name="home_adId">ca-app-pub-6424626033677167/2644906935</string>
    <string name="test_AdId">ca-app-pub-3940256099942544/6300978111</string>
    <string name="deleted">Delete</string>
    <string name="undo">Undo</string>
    <string name="update">Update</string>
    <string name="amount">Amount Paid</string>
    <string name="formatted_amount">%s%s</string>
    <string name="update_payment">Update Payment</string>
    <string name="delete">Delete</string>
    <string name="action_penalty">Record Penalty/Fee</string>
    <string name="action_topup">Top-Up Loan</string>
    <string name="penalty">Penalty</string>
    <string name="penalty_amount" formatted="false">Current loan balance %s %s.\nEnter penalty details</string>
    <string name="topup_amount" formatted="false">Current loan balance %s %s.\nEnter top-up details</string>
    <string name="topup">Top-Up</string>
    <string name="pay_desc">Description</string>
    <string name="penalty_paid_text">Penalty Total:</string>
    <string name="loan_topups">Total Top Up:</string>
    <string name="version_name">PennyWise Debt Tracker  v %s</string>
    <string name="contact_dev">Email Developer</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="backup">Backup/Restore Data</string>
    <string name="home">Home</string>
    <string name="summary">Summary</string>
    <string name="payment_date">Date (DD/MM/YYYY)</string>
    <string name="payment_note">Note</string>
    <string name="payment_amnt">Amount</string>
    <string name="ok">OK</string>
    <string name="note">Payment Note</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="backup_category">Data BackUp</string>
    <string name="prefToggleBackUp">pref_backup_toggle</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="security_category">Security</string>
    <string name="media">Media</string>
    <string name="palette">Palette</string>
    <string name="colors">Colors</string>
    <string name="color">Color</string>
    <string name="base_theme">Base Theme</string>
    <string name="dark_amoled">Dark AMOLED</string>
    <string name="white">White</string>
    <string name="dark">Dark</string>
    <string name="ok_action">OK</string>
    <string name="at">\@</string>
    <string name="time">07:00</string>
    <string name="today">Today</string>
    <string name="add_reminder">Add reminder</string>
    <string name="backup_off">Disabled</string>
    <string name="backup_on">Enabled</string>
    <string name="date_today">Today</string>
    <string name="backup_in_progress">Back up in progress.</string>
    <string name="toast_export_error">BackUp failed</string>
    <string name="life_time">Life Time</string>
    <string name="this_month">This Month</string>
    <string name="last_three_months">Last Three Months</string>
    <string name="last_six_months">Last Six Months</string>
    <string name="title_progress_importing_database">Importing Data...</string>
    <string name="toast_error_importing_accounts">Error Importing data</string>
    <string name="toast_success_importing_accounts">Success importing data</string>
    <string name="DROPBOX_APP_KEY">0rojln465yx3ed9</string>
    <string name="repeats_on">Repeats on:</string>
    <string name="repeat_every">Repeat every</string>
    <string name="repeats_every">Repeats every: %1$d %2$s</string>
    <string name="forever">Forever</string>
    <string name="does_not_repeat">Does not repeat</string>
    <string name="repeat_notification">Number of times to repeat:</string>
    <string name="one" translatable="false">1</string>
    <string name="times">times</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_detail">Add a snooze action to the notification</string>
    <string name="snooze_length">Snooze length</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_confirmation">Are you sure you want to delete this notification?</string>
    <string name="times_shown">Shown %1$d out of %2$d times</string>
    <string name="toast_mark_as_done">Marked next reminder as done</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_about">About</string>
    <string name="action_show_now">Show now</string>
    <string name="action_mark_as_done">Mark as done</string>
    <string name="amount_borrowed">Borrowed</string>
    <string name="amount_lent">Lent</string>
    <string name="submit">Submit</string>
    <string name="application">Application</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="new_transaction">New Transaction</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be 5 or more characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="select_transaction_type">Select transaction Type</string>
    <string name="borrowing">Borrowing</string>
    <string name="lending">Lending</string>
    <string name="due_date">Due Date</string>
    <string name="name">Name</string>
    <string name="desc_google_drive_login">Please perform google authentication to sync your application data with Google drive.\n\nPlease note, your application data will be stored in your Google drive and not our servers.</string>
    <string name="desc_google_drive_logout">This system using your google drive account to sync your details. Please use logout option to Logout, if you no longer wanted to sync the data</string>
    <string name="title_google_drive">Let\'s sync with GoogleDrive</string>
    <string name="btn_login">Google SignIn</string>
    <string name="btn_logout">Google SignOut</string>
    <string name="desc_auth_failed">Authentication is failed, please try again later</string>
    <string name="acc_sync_google_drive">Sync with Google drive</string>
    <string name="user_name">User Name</string>
    <string name="title_sync_summary">Data sync summary</string>
    <string name="last_sync_time">Last sync time</string>
    <string name="no_sync_yet">Data synchronization is not happen yet</string>
    <string name="sync_schedule">Manual synchronization is required all the time!</string>
    <string name="acc_sync_file">Sync files</string>
    <string name="drive_sync_notification_title">GiftRegister Google Drive Sync</string>
    <string name="default_message">Sync is in progress</string>
    <string name="notification_channel_id">Gift Register</string>
    <string name="notification_title">Sync data with Google Drive</string>
    <string name="cancel_download">Cancel</string>
    <string name="sync_started">Google drive sync started</string>
    <string name="title_drive_back">Google Drive Backup</string>
    <string name="activity_backup_drive_automatic">Automatic backup</string>
    <string name="activity_backup_drive_desc">Backing up your data to your Google Drive allows you to restore all your readings in case you lose or change devices.</string>
    <string name="activity_backup_drive_message_restart">Restarting to apply changes...</string>
    <string name="activity_backup_drive_desc_1">Sync Glucosio\'s database in the cloud with Google Drive.</string>
    <string name="activity_backup_drive_desc_2">You\'ll be able to restore all your readings if you lost or change phone or sync Glucosio\'s data between your devices.</string>
    <string name="activity_backup_drive_success">Database successfully backed up to Drive</string>
    <string name="activity_backup_drive_restore_success">Successfully restored database from Drive</string>
    <string name="activity_backup_drive_failed">Something went wrong. Please try again :/</string>
    <string name="activity_backup_drive_last">Last backup:</string>
    <string name="activity_backup_drive_folder">Backup folder</string>
    <string name="activity_backup_drive_folder_not_set">Not set</string>
    <string name="activity_backup_drive_button_backup">Backup now</string>
    <string name="features">Features</string>
    <string name="extras">Extras</string>
    <string name="currency">Currency</string>
</resources>