<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp_1"
        android:checkableBehavior="single">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/home" />
    </group>

    <group android:checkableBehavior="single">

        <item android:title="@string/features">

            <menu>

                <item
                    android:id="@+id/summaryFragment"
                    android:icon="@drawable/ic_view_list_black_24dp"
                    android:title="@string/summary" />

                <item
                    android:id="@+id/backUpFragment"
                    android:icon="@drawable/ic_view_list_black_24dp"
                    android:title="@string/backup" />

                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/ic_settings_black_48dp"
                    android:title="@string/settings" />

            </menu>

        </item>

        <item android:title="@string/extras">

            <menu>
                <item
                    android:id="@+id/action_share"
                    android:icon="@drawable/ic_view_list_black_24dp"
                    android:title="@string/share" />

                <item
                    android:id="@+id/action_rate"
                    android:icon="@drawable/ic_view_list_black_24dp"
                    android:title="@string/rate" />
            </menu>

        </item>
    </group>

</menu>