<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loan_payment_list_header"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="?attr/colorPrimary"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_weight="1"
        android:focusable="false"
        android:gravity="center_vertical"
        android:textColor="?attr/colorOnPrimary"
        android:text="@string/pay_date"
        android:textSize="@dimen/text_four_teen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_weight="1"
        android:focusable="false"
        android:textColor="?attr/colorOnPrimary"
        android:gravity="center"
        android:text="@string/pay_desc"
        android:textSize="@dimen/text_four_teen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:textColor="?attr/colorOnPrimary"
        android:gravity="end"
        android:text="@string/amount"
        android:textSize="@dimen/text_four_teen" />

</LinearLayout>
