<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/payment_date"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
    <EditText
        android:id="@+id/payment_date"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="date"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/payment_amnt"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

    <EditText
        android:id="@+id/payment_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/payment_note"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

    <EditText
        android:id="@+id/payment_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="4"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>