<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/alarm_icon"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/alarm_off" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/medium_spacing"
            android:paddingEnd="@dimen/table_row_default_padding_side"
            android:paddingRight="@dimen/table_row_default_padding_side"
            android:paddingTop="@dimen/medium_spacing">

            <TextView
                android:id="@+id/reminder_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/add_reminder"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_four_teen" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/forever_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingBottom="@dimen/medium_spacing"
            android:paddingEnd="@dimen/table_row_default_padding_side"
            android:paddingRight="@dimen/table_row_default_padding_side"
            android:paddingTop="@dimen/medium_spacing"
            android:visibility="gone"
            android:weightSum="1">

            <TextView
                android:id="@+id/forever"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/forever"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_four_teen" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_toggle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                app:showText="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:paddingEnd="@dimen/table_row_default_padding_side"
            android:paddingRight="@dimen/table_row_default_padding_side"
            android:visibility="gone"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeat_notification"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_four_teen" />

                <EditText
                    android:id="@+id/show_times_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="4"
                    android:minWidth="30dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/one"
                    android:textColorHighlight="@color/secondary_text"
                    android:textSize="@dimen/text_four_teen" />

                <TextView
                    android:id="@+id/times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/times"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_four_teen"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingTop="7dp"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/error_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_error_white_24dp"
                    android:tint="@color/error"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>