<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/dashboard"
        android:layout_width="match_parent"
        android:layout_height="96dp">

        <View
            android:id="@+id/divider"
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="24dp"
            android:background="@color/icons" />

        <LinearLayout
            android:id="@+id/borrowedContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/divider"
            android:gravity="center"
            android:onClick="onClick"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/amount_borrowed"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/icons" />

            <TextView
                android:id="@+id/borrowedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="0.00"
                android:textColor="@color/icons"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/divider"
            android:gravity="center"
            android:onClick="onClick"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/amount_lent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/icons" />

            <TextView
                android:id="@+id/lentLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="0.00"
                android:textColor="@color/icons"
                android:textSize="24sp" />
        </LinearLayout>

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="gone"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/test_AdId" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_grey_100"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/content_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/empty_view"
                style="@style/Text.Placeholder"
                android:text="@string/no_transactions"
                android:textSize="@dimen/large_text" />
        </FrameLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/my_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/layout"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:scrollbars="vertical" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_add_white_24dp"
                app:layout_anchor="@id/my_recycler_view"
                app:layout_anchorGravity="bottom|right|end"
                app:layout_behavior="com.iogarage.ke.pennywise.util.FABScrollBehavior" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>


    </FrameLayout>

</LinearLayout>

